# jarvis

./: .env.example  Dockerfile  docker-compose.yaml  pyproject.toml
src/jarvis/: main.py
src/jarvis/api/: health_routes.py  routes.py  schemas.py
src/jarvis/api/v1/: __init__.py
src/jarvis/apps/agents/: __init__.py
src/jarvis/apps/agents/jarvis/: agent.py  llm.py  state.py
src/jarvis/apps/google_calendar/: app.py  mcp.py  tool.py
src/jarvis/apps/todoist/: app.py  mcp.py  tool.py
src/jarvis/bot/: handlers.py  keyboards.py  main.py
src/jarvis/core/: app.py  exceptions.py  lifespan.py  mcp_manager.py  settings.py
tests/jarvis/: conftest.py
tests/jarvis/api/v1/: test_health.py
